Finished remote setup & fixed colour of buttons when viewed on mobile and ipad safari

--- a/4.5 Todo web app/public/styles/main.css
+++ b/4.5 Todo web app/public/styles/main.css
@@ -215,7 +215,8 @@ body {
 }
 
 .btn-filter {
-  text-decoration: none;
+  text-decoration: none !important;
+  color:black;
   background-color: #a8bba1;
   border: none;
   width: 100px;
